# TrashMen

./: demo1.py  park.world  parklaunch  pythonControlGui.py  run_in_sequence.launch.py
GoalCycleNode/: CMakeLists.txt  package.xml
GoalCycleNode/src/: GoalCycleNode.cpp
Lab2/: CMakeLists.txt  package.xml
Lab2/src/: data_processor.cpp  sprint1.cpp
WalledParkWorld/: park.launch.py  parkNew.world
navigation_handler/: CMakeLists.txt
navigation_handler/src/: navigation_handler.cpp
sprint3_32/: CMakeLists.txt  main.cpp
sprint3_36/: CMakeLists.txt
sprint3_36/html/: classCylinderIdentifier-members.html  classCylinderIdentifier.html  classCylinderIdentifier__inherit__graph.md5  classes.html  functions.html  functions_func.html  functions_vars.html  globals_func.html  hierarchy.html  index.html  inherit_graph_0.map  inherits.html  sprint3__36_8cpp__incl.map
sprint3_36/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_7.js  classes_0.js  files_0.js  functions_1.js  functions_4.js  searchdata.js  variables_0.js  variables_2.js
sprint3_36/latex/: classCylinderIdentifier__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  hierarchy.tex
sprint3_36/src/: map.pgm  map.yaml  sprint3_36.cpp
sprint4_35/: CMakeLists.txt
sprint4_35/html/: annotated.html  classCylinderIdentifier__coll__graph.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  graph_legend.html  inherit_graph_0.md5  sprint3__36_8cpp.html  sprint3__36_8cpp__incl.md5
sprint4_35/html/search/: all_2.js  all_3.js  all_6.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  variables_1.js
sprint4_35/latex/: annotated.tex  classCylinderIdentifier.tex  files.tex  refman.tex  sprint3__36_8cpp.tex  sprint3__36_8cpp__incl.md5
sprint4_35/src/: sprint4_35.cpp
sprint4_35new/: Doxyfile  package.xml  v1
sprint4_35new/launch/: run_in_sequence.launch.py
sprint4_35new/src/: map4.bt  map4.pcd  map4.yaml  sprint4_35.cpp
